<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alwaysDrawnWithCache="true"
            android:animateLayoutChanges="true"
            android:clipToPadding="true"
            android:fadingEdge="vertical"
            android:isScrollContainer="true"
            android:overScrollMode="always"
            android:scrollbarStyle="insideOverlay"
            tools:ignore="MissingConstraints,NotSibling">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/name"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/type"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/type"
                        android:textStyle="bold"
                        android:layout_column="0"/>
                    <TextView
                        android:id="@+id/sector"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="sector"
                        android:textStyle="bold"
                        android:layout_column="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/parent_details"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parent_name"
                        android:layout_column="0"/>

                    <TextView
                        android:id="@+id/parent_code"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/parent_name"
                        android:layout_column="1"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/address_title"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/address"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addressDetails" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/website"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textlink" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/phone"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/fax"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fax" />
                </TableRow>
            </TableLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>